--- a/index.html
+++ b/index.html
@@ -35,10 +35,20 @@
         <img src="images/team4.png" alt="">
       </div>
       <div class="our-features">
-        <h3 class="feature-title">Quick list of Our Features</h3>
-        <p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick-list</span> of Our </span><span class="text-primary">Features</span></h3>
+        <p class="features-description ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         <button class="btn-primary">Explore More</button>
       </div>
+     </section>
+     <!--features section enjoy-->
+     <section>
+      <h3 class="section-title">Some Facts</h3>
+       <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+     </section>
+     <!--some facts-->
+     <section class="some-facts">
+
      </section>
   </main>
   <footer>
